# econ_test

./: .clang-format  CMakeLists.txt
include/: arena.h  core.h  pool.h  simulation.h
src/: core.cpp  main.cpp  simulation.cpp
